# Vortax

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: static.yml
datasets/: clean_mesh.py
docs/site/: index.html  motorbike_scene.html
fluidity/: mesh.py  ring_vortex.py  ring_vortex_demo.py  types.py
fluidity/postprocessing/: plot_symlog.py
fluidity/singularities/: ring_vortex.py  singularity_system.py  utils.py
fluidity/singularities/old/: ring_vortex.py
studies/: warp_jax_test.py
vortax/: doublet.py  doublet_demo.py  mesh.py  ring_vortex.py  ring_vortex_demo.py  source.py  source_demo.py
vortax/singularities/: indexed_tree.py  utils.py
vortax/singularities/old/: ring_vortex.py
