[project]
name = "vortax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "equinox>=0.11.12",
    "jax>=0.5.3",
    "jaxlib>=0.5.3",
    "jaxtyping>=0.3.0",
    "lineax>=0.0.7",
    "numpy>=2",
    "pyvista>=0.44.2",
]

[dependency-groups]
dev = [
    "vortax",
]

[tool.uv.sources]
vortax = { workspace = true }

[tool.ruff]
lint.ignore = ["F722"]  # Recommended by jaxtyping

