[project]
name = "vortax"
version = "0.1.0"
description = "Differentiable and scalable 3D panel method aerodynamics, (optionally) on the GPU."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "equinox>=0.11.12",
    "jax>=0.5.3",
    "jaxlib>=0.5.3",
    "jaxtyping>=0.3.0",
    "lineax>=0.0.7",
    "numpy>=2",
    "pyvista>=0.44.2",
]

[project.optional-dependencies]
dev = [
    "jax[cuda12]>=0.5.3",
    "ipython>=8.34.0",
    "ipykernel>=6.29.5",
    "pyvista[all]>=0.44.2",
    "ipywidgets>=8.1.5",
    "pyacvd>=0.2.9",
    "trimesh>=3.20.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vortax"]

[tool.ruff]
lint.ignore = ["F722"]  # Recommended by jaxtyping
